--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -34,6 +34,8 @@
                        </li>
                        <li class="nav-item">
                            <a class="nav-link" href="/contacts/">Contact</a>
+                       <li class="nav-item">
+                           <a class="nav-link" href="/test/">Test</a>
                        </li>
                    </ul>
                </div>
