--- a/templates/flatpages/test.html
+++ b/templates/flatpages/test.html
@@ -4,7 +4,8 @@
 <title>{{ flatpage.title }}</title>
 </head>
 <body>
-    {{ flatpage.content }}
-    <i>{{ flatpage.content }}</i>
+{{ flatpage.content }}
+    <i>{{ flatpage.content }}<i/>
+
 </body>
 </html>
