--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -25,17 +25,17 @@
                <div class="collapse navbar-collapse" id="navbarResponsive">
                    <ul class="navbar-nav ml-auto">
                        <li class="nav-item active">
-                           <a class="nav-link" href="#">Home
-                               <span class="sr-only">(current)</span>
+                           <span class="sr-only">(current)</span>
                            </a>
                        </li>
-                       <li class="nav-item">
-                           <a class="nav-link" href="/about/">About</a>
+                       <a class="nav-link" href="/about/">Учеба</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="/contacts/">Contact</a>
+                           <a class="nav-link" href="/support/">Специалисты</a>
                        <li class="nav-item">
-                           <a class="nav-link" href="/test/">Test</a>
+                           <a class="nav-link" href="/test/">ТЕСТ</a>
+                       <li class="nav-item">
+                           <a class="nav-link" href="/money/">ПОЖЕРТВОВАНИЯ</a>
                        </li>
                    </ul>
                </div>
